# swagger/swagger.json
@@ -1497,71 +1497,71 @@
         }
     },
     "definitions": {
-        "10067.0xc0005a7770.false": {
+        "10067.0xc0005d98f0.false": {
             "title": "false",
             "type": "object"
         },
-        "11051.0xc0005a77a0.false": {
+        "11051.0xc0005d9920.false": {
             "title": "false",
             "type": "object"
         },
-        "12974.0xc0005a77d0.false": {
+        "12974.0xc0005d9950.false": {
             "title": "false",
             "type": "object"
         },
-        "13039.0xc0005a7800.false": {
+        "13039.0xc0005d9980.false": {
             "title": "false",
             "type": "object"
         },
-        "13107.0xc0005a7830.false": {
+        "13107.0xc0005d99b0.false": {
             "title": "false",
             "type": "object"
         },
-        "13342.0xc0005a7860.false": {
+        "13342.0xc0005d99e0.false": {
             "title": "false",
             "type": "object"
         },
-        "13399.0xc0005a7890.false": {
+        "13399.0xc0005d9a10.false": {
             "title": "false",
             "type": "object"
         },
-        "13455.0xc0005a78c0.false": {
+        "13455.0xc0005d9a40.false": {
             "title": "false",
             "type": "object"
         },
-        "29942.0xc0005cd9e0.false": {
+        "29939.0xc000603b60.false": {
             "title": "false",
             "type": "object"
         },
-        "33037.0xc0005d83f0.false": {
+        "33034.0xc00060e570.false": {
             "title": "false",
             "type": "object"
         },
-        "6752.0xc0005a7620.false": {
+        "6752.0xc0005d97a0.false": {
             "title": "false",
             "type": "object"
         },
-        "6808.0xc0005a7650.false": {
+        "6808.0xc0005d97d0.false": {
             "title": "false",
             "type": "object"
         },
-        "9396.0xc0005a7680.false": {
+        "9396.0xc0005d9800.false": {
             "title": "false",
             "type": "object"
         },
-        "9476.0xc0005a76b0.false": {
+        "9476.0xc0005d9830.false": {
             "title": "false",
             "type": "object"
         },
-        "9536.0xc0005a76e0.false": {
+        "9536.0xc0005d9860.false": {
             "title": "false",
             "type": "object"
         },
-        "9605.0xc0005a7710.false": {
+        "9605.0xc0005d9890.false": {
             "title": "false",
             "type": "object"
         },
-        "9974.0xc0005a7740.false": {
+        "9974.0xc0005d98c0.false": {
             "title": "false",
             "type": "object"
         },
@@ -1779,6 +1779,9 @@
                     "type": "string"
                 },
                 "token": {
+                    "type": "string"
+                },
+                "tokenexpired": {
                     "type": "string"
                 }
             }
@@ -2741,6 +2744,9 @@
                 "FotoKartuIdentitas": {
                     "type": "string"
                 },
+                "FotoRumah1": {
+                    "type": "string"
+                },
                 "FotoSuketDomisili": {
                     "type": "string"
                 },
@@ -2951,6 +2957,9 @@
                 "PendapatanKotor_perHari_Suami": {
                     "type": "string"
                 },
+                "PendidikanAnak": {
+                    "type": "string"
+                },
                 "PengeluaranKel_perHari": {
                     "type": "string"
                 },
@@ -3069,7 +3078,7 @@
                     "type": "string"
                 },
                 "ClientID": {
-                    "$ref": "#/definitions/33037.0xc0005d83f0.false"
+                    "$ref": "#/definitions/33034.0xc00060e570.false"
                 },
                 "ID_Prospek": {
                     "type": "string"
@@ -3204,7 +3213,7 @@
                     "type": "string"
                 },
                 "Status_Kelayakan": {
-                    "$ref": "#/definitions/29942.0xc0005cd9e0.false"
+                    "$ref": "#/definitions/29939.0xc000603b60.false"
                 }
             }
         },
@@ -3327,16 +3336,16 @@
                     "type": "string"
                 },
                 "Is_AdaAdaToiletPribadi": {
-                    "$ref": "#/definitions/10067.0xc0005a7770.false"
+                    "$ref": "#/definitions/10067.0xc0005d98f0.false"
                 },
                 "Is_AdaAksesAirBersih": {
-                    "$ref": "#/definitions/9974.0xc0005a7740.false"
+                    "$ref": "#/definitions/9974.0xc0005d98c0.false"
                 },
                 "Is_AdaPembiayaanLain": {
                     "type": "string"
                 },
                 "Is_Ada_Rekening_Bank": {
-                    "$ref": "#/definitions/9396.0xc0005a7680.false"
+                    "$ref": "#/definitions/9396.0xc0005d9800.false"
                 },
                 "Is_Ditempat": {
                     "type": "string"
@@ -3414,7 +3423,7 @@
                     "type": "string"
                 },
                 "Kelompok_ID": {
-                    "$ref": "#/definitions/12974.0xc0005a77d0.false"
+                    "$ref": "#/definitions/12974.0xc0005d9950.false"
                 },
                 "Kelurahan": {
                     "type": "string"
@@ -3438,13 +3447,13 @@
                     "type": "string"
                 },
                 "Latitude": {
-                    "$ref": "#/definitions/6752.0xc0005a7620.false"
+                    "$ref": "#/definitions/6752.0xc0005d97a0.false"
                 },
                 "Lokasi_Sos": {
                     "type": "string"
                 },
                 "Longitude": {
-                    "$ref": "#/definitions/6808.0xc0005a7650.false"
+                    "$ref": "#/definitions/6808.0xc0005d97d0.false"
                 },
                 "Luas_Bangunan": {
                     "type": "string"
@@ -3453,7 +3462,7 @@
                     "type": "string"
                 },
                 "Nama_Bank": {
-                    "$ref": "#/definitions/9476.0xc0005a76b0.false"
+                    "$ref": "#/definitions/9476.0xc0005d9830.false"
                 },
                 "Nama_Gadis_Ibu_Kandung": {
                     "type": "string"
@@ -3465,7 +3474,7 @@
                     "type": "string"
                 },
                 "Nama_Kelompok": {
-                    "$ref": "#/definitions/13107.0xc0005a7830.false"
+                    "$ref": "#/definitions/13107.0xc0005d99b0.false"
                 },
                 "Nama_KelurahanDesa": {
                     "type": "string"
@@ -3474,7 +3483,10 @@
                     "type": "string"
                 },
                 "Nama_Pembiayaan_Lembaga_Lain": {
-                    "$ref": "#/definitions/11051.0xc0005a77a0.false"
+                    "$ref": "#/definitions/11051.0xc0005d9920.false"
+                },
+                "Nama_Pendidikan": {
+                    "type": "string"
                 },
                 "Nama_Penjamin": {
                     "type": "string"
@@ -3510,7 +3522,7 @@
                     "type": "string"
                 },
                 "No_Rekening": {
-                    "$ref": "#/definitions/9536.0xc0005a76e0.false"
+                    "$ref": "#/definitions/9536.0xc0005d9860.false"
                 },
                 "No_Telp": {
                     "type": "string"
@@ -3525,7 +3537,7 @@
                     "type": "string"
                 },
                 "Pemilik_Rekening": {
-                    "$ref": "#/definitions/9605.0xc0005a7710.false"
+                    "$ref": "#/definitions/9605.0xc0005d9890.false"
                 },
                 "PendapatanBersih_perBulan": {
                     "type": "string"
@@ -3561,7 +3573,7 @@
                     "type": "string"
                 },
                 "PostStatus": {
-                    "$ref": "#/definitions/13342.0xc0005a7860.false"
+                    "$ref": "#/definitions/13342.0xc0005d99e0.false"
                 },
                 "Produk_Pembiayaan": {
                     "type": "string"
@@ -3570,7 +3582,7 @@
                     "type": "string"
                 },
                 "Reason": {
-                    "$ref": "#/definitions/13399.0xc0005a7890.false"
+                    "$ref": "#/definitions/13399.0xc0005d9a10.false"
                 },
                 "Siklus": {
                     "type": "string"
@@ -3588,7 +3600,7 @@
                     "type": "string"
                 },
                 "Sub_Kelompok": {
-                    "$ref": "#/definitions/13039.0xc0005a7800.false"
+                    "$ref": "#/definitions/13039.0xc0005d9980.false"
                 },
                 "TTD_AO": {
                     "type": "string"
@@ -3618,7 +3630,7 @@
                     "type": "string"
                 },
                 "Tanggal_Verif": {
-                    "$ref": "#/definitions/13455.0xc0005a78c0.false"
+                    "$ref": "#/definitions/13455.0xc0005d9a40.false"
                 },
                 "Tempat_Lahir": {
                     "type": "string"
